--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">FirstAPP</string>
+    <string name="app_name" translatable="false">FirstAPP</string>
     <string name="action_settings">Settings</string>
     <string name="app_no">cancle</string>
     <string name="app_ok">ok</string>
