--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,14 @@
 <resources>
     <string name="app_name" translatable="false">FirstAPP</string>
     <string name="action_settings">Settings</string>
-    <string name="app_no">cancle</string>
-    <string name="app_ok">ok</string>
+    <string name="app_birthday">Happy Birthday</string>
+    <string name="yours">From_IreneChia</string>
+    <string name="to_name">To_Sherlok</string>
+    <string name="teamName">Team name</string>
+    <string name="Score">Score</string>
+    <string name="lab_1">+1 point</string>
+    <string name="lab_2">+2 points</string>
+    <string name="lab_3">+3 points</string>
+    <string name="first_score">0</string>
+    <string name="reset">reset</string>
 </resources>
