--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,11 @@
     <string name="lab_3">+3 points</string>
     <string name="first_score">0</string>
     <string name="reset">reset</string>
+    <string name="inputRMB">Imput RMB</string>
+    <string name="hello">Hello</string>
+    <string name="btn_Euro">Euro</string>
+    <string name="btn_Won">Won</string>
+    <string name="btn_Dollar">Dollar</string>
+    <string name="openOne">openScore</string>
+
 </resources>
